test - added resume

--- a/resumepage.html/landingpage.html
+++ b/resumepage.html/landingpage.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active">Resume</a>
+          <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
         </li>
       </ul>
       <!--Navbar search box-->
@@ -49,32 +49,33 @@
 </nav>
 <!--Landing Page - HTML-->
     <p>
-     Hello, I'm Sylvia Le
+     <b>Hello, I'm Sylvia Le</b>
      </p>
     <h1>
         Welcome to My Personal Portfolio Page!
     </h1>
     <p>
-        Sophomore @ The University of Washington Bothell |  Hodophile | Foodie 
+        <b>Sophomore @ The University of Washington Bothell |  Hodophile | Foodie</b>
     </p>
 <!--Linking Image to a URL - JavaScript-->
     <!--HTML Website-->
-  <class id="image1">
+  <class id="html">
     <a href="https://sylviale101.github.io/HTML/Sylviale101.html">
-        <img alt="html page" class="figure-img img-fluid rounded" src="/Images/html.png" >
+        <img alt="html page" class="figure-img img-fluid rounded" src="/Images/HTML.PNG" >
     </a>
   </class>
   <!--CSS Website-->
-  <class id="image2">
+  <class id="css">
     <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
       <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
     </a>
   </class>
   <!--Bootstrap Website-->
-    <class id="image3">
-      <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
-        <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
+    <class id="bootstrap">
+      <a href="https://sylviale101.github.io/Bootstrap/Sylviale101-bootstrap.html#">
+        <img alt="bootstrap page" class="figure-img img-fluid rounded" src="/Images/bootstrap.PNG">
      </a>
     </class>
+    <class id="image4"
   </body>
 </html>
