added trademark + image styles

--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -77,6 +77,14 @@
         <img alt="bootstrap page" class="figure-img img-fluid rounded" src="/Images/bootstrap.PNG">
      </a>
     </class>
-    <class id="image4"
+    <!--Javascript webpage holder-->
+    <class id="javascript"
+      <a href=""
+    </class>
+    <class id="trademark"
+    <br>
+    <p>
+      Copyright © Sylvia. All Rights Reserved. 
+    </p>
   </body>
 </html>
