--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -33,7 +33,7 @@
             <a class="nav-link active" aria-current="page" href="#">Projects</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
+          <a class="nav-link active" href="#">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
@@ -79,7 +79,9 @@
     </class>
     <!--Javascript webpage holder-->
     <class id="javascript"
-      <a href=""
+      <a href="">
+        <img alt="javascript page" class="figure-img img-fluid rounded" src="/Images/jsplaceholder.PNG"
+      </a>
     </class>
     <class id="trademark"
     <br>
