added home page to about me page

--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -27,7 +27,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!--Menu Items-->
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home Page</a>
+                  <a class="nav-link active" aria-current="page" href="https://sylviale101.github.io/Individualproject/landingpage.html">Home Page</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Projects</a>
