added about me page to landing

--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -33,7 +33,7 @@
             <a class="nav-link active" aria-current="page" href="#">Projects</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">About Me</a>
+          <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/aboutpage.html">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
