Disabling + Activating certain pages

--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -26,19 +26,19 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <!--Menu Items-->
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-current="page" href="https://sylviale101.github.io/Individualproject/landingpage.html">Home Page</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Projects</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/aboutpage.html">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
-        </li>
-      </ul>
+    <li class="nav-item">
+      <a class="nav-link disabled" aria-current="page" href="https://sylviale101.github.io/Individualproject/landingpage.html">Home Page</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="https://sylviale101.github.io/Individualproject/aboutpage.html">About Me</a>
+      </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/projectspage.html">Projects</a>
+    </li>
+  </ul>
       <!--Navbar search box-->
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
