--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -22,7 +22,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" length="10" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16">
                 <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
              </svg>
-            <a class="navbar-brand" href="#"> Sylvia's About Me Page</a>
+            <a class="navbar-brand" href="#"> Sylvia's Projects Page</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!--Menu Items-->
@@ -30,13 +30,20 @@
                   <a class="nav-link active" aria-current="page" href="https://sylviale101.github.io/Individualproject/landingpage.html">Home Page</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Projects</a>
+                    <a class="nav-link disabled" aria-current="page" href="https://sylviale101.github.io/Individualproject/aboutpage.html">About Me</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#">About Me</a>
+                  <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="https://1drv.ms/w/s!ArKAkwiLltMrkF42pwFzC7ly79eP?e=kPGiNP">Resume</a>
+                  <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/projectspage.html">Projects</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a></li>
+                    <li><a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a></li>
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">Bootstrap Page</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Index.html">Team Index Page</a></li>
+                  </ul>
                 </li>
               </ul>
               <!--Navbar search box-->
