--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -37,7 +37,21 @@
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/projectspage.html">Projects</a>
-    </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Projects
+          </a>
+          <!--Projects dropdown menu - Bootstrap v5.2-->
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a></li>
+            <li><a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a></li>
+            <li><a class="dropdown-item" href="https://givemeabetterusername.github.io/Team2Bootstrap/Sylviale101/Sylviale101-bootstrap.html">Bootstrap Page</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Index.html">Team Index Page</a></li>
+          </ul>
+        </li>
+      </ul>
+     </li>
   </ul>
       <!--Navbar search box-->
       <form class="d-flex" role="search">
