--- a/Individualproject/JSpage.html
+++ b/Individualproject/JSpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About me Page</title>
+        <title>JavaScript Page</title>
         <!--Bootstrap Stuff + Linking CSS Style Sheets-->
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -22,7 +22,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="60" height="20" length="10" fill="currentColor" class="bi bi-box" viewBox="0 0 16 16">
                 <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5 8 5.961 14.154 3.5 8.186 1.113zM15 4.239l-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"/>
              </svg>
-            <a class="navbar-brand" href="#"> Sylvia's Projects Page</a>
+            <a class="navbar-brand" href="#"> Sylvia's Javascript Project Page</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!--Menu Items-->
