--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -54,4 +54,20 @@
             </div>
           </div>
         </nav>
+        <!--End of Navbar / Start of About Page-->
+    <div container>
+    <class id="aboutheader">
+    <h1>About Me Page</h1>
+    </class>
+    </div>
+    <div container>
+      <img src=""
+    </div>
+    <!--Trademark-->
+    <class id="trademark"
+    <br>
+    <p>
+      Copyright © Sylvia. All Rights Reserved. 
+    </p>
+    </body>
 </html>
