--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -58,7 +58,8 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
-  </div>
+</div>
+<!--End of Nav / Start of Header of webpage-->
 </nav>
 <!--Landing Page - HTML-->
     <p>
@@ -96,6 +97,7 @@
         <img alt="javascript page" class="figure-img img-fluid rounded" src="/Images/jsplaceholder.PNG"
       </a>
     </class>
+<!--Personal Trademark-->
     <class id="trademark"
     <br>
     <p>
