about page desc + self portrait added

--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -39,6 +39,7 @@
                   <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/projectspage.html">Projects</a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a></li>
+                    <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html"-->
                     <li><a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a></li>
                     <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">Bootstrap Page</a></li>
                     <li><hr class="dropdown-divider"></li>
@@ -60,8 +61,33 @@
     <h1>About Me Page</h1>
     </class>
     </div>
+    <!--Self Portrait-->
     <div container>
-      <img src=""
+      <class id="selfportrait">
+      <img src="/Images/selfportrait.PNG" alt="Sylvia @ UW Seattle">
+      </class>
+    </div>
+    <!--Personal Description-->
+    <div container>
+      <div id="selfdesc"
+        <p>
+          <br>
+          Hello there! My name is Sylvia Le and I am currently a sophomore student at the University of Washington intending to major in 
+          <br>
+          Computer Science. My native language is Vietnamese but I was born in Washington. A hobby of mine is that I enjoy playing a
+          <br>
+          variety of genre of games (League of Legends, Stardew Valley, Genshin Impact, etc.). During High school, I taught a couple of
+          <br>
+          series of Computer Science courses and also ran my own Computer Science club and started a project in my school district
+          <br>
+          called "Go baby Go" which implemented programming and engineering to help disabled children within my school community.
+          <br>
+          I also was invited to participate in Microsoft's beta testing team (direct) and implemented feedback for a well-known game
+          <br>
+          series known as "Minecraft" for their educational game known as "Minecraft Education".
+          <br>
+      </p>
+      </div>
     </div>
     <!--Trademark-->
     <class id="trademark"
