center about me page objects

--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -74,11 +74,11 @@
           <br>
           Hello there! My name is Sylvia Le and I am currently a sophomore student at the University of Washington intending to major in 
           <br>
-          Computer Science. My native language is Vietnamese but I was born in Washington. A hobby of mine is that I enjoy playing a
+          Computer Science. My native language is Vietnamese but I was born in Washington. A hobby of mine is that I enjoy playing a variety of
           <br>
-          variety of genre of games (League of Legends, Stardew Valley, Genshin Impact, etc.). During High school, I taught a couple of
+          genre of games (League of Legends, Stardew Valley, Genshin Impact, etc.) during my free time. During High school, I taught a couple of series
           <br>
-          series of Computer Science courses and also ran my own Computer Science club and started a project in my school district
+          of Computer Science courses and also ran my own Computer Science club and started a project in my school district called "Go baby Go" which
           <br>
           called "Go baby Go" which implemented programming and engineering to help disabled children within my school community.
           <br>
