Changed trade mark - Added last name

--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -101,7 +101,7 @@
     <class id="trademark"
     <br>
     <p>
-      Copyright © Sylvia. All Rights Reserved. 
+      Copyright © Sylvia Le. All Rights Reserved. 
     </p>
   </body>
 </html>
