--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -72,15 +72,15 @@
       <div id="selfdesc"
         <p>
           <br>
-          Hello there! My name is Sylvia Le and I am currently a sophomore student at the University of Washington intending to major in 
+          Hello there! My name is Sylvia and I am currently a sophomore student at the University of Washington intending to major in 
           <br>
           Computer Science. My native language is Vietnamese but I was born in Washington. A hobby of mine is that I enjoy playing a variety of
           <br>
           genre of games (League of Legends, Stardew Valley, Genshin Impact, etc.) during my free time. During High school, I taught a couple of series
           <br>
-          of Computer Science courses and also ran my own Computer Science club and started a project in my school district called "Go baby Go" which
+          of Computer Science courses and also ran my own Computer Science club and started a project in my school district called "Go baby Go"
           <br>
-          called "Go baby Go" which implemented programming and engineering to help disabled children within my school community.
+         which implemented programming and engineering to help disabled children within my school's community.
           <br>
           I also was invited to participate in Microsoft's beta testing team (direct) and implemented feedback for a well-known game
           <br>
