save to sync with github

--- a/Individualproject/htmlpage.html
+++ b/Individualproject/htmlpage.html
@@ -52,6 +52,13 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </div>
+            <!--Start of HTML Page-->
           </div>
+          <div container>
+          <div class id="htmlhead">
+            <h1>HTML Page</h1>
+          </div>
+          <!--html page preview img-->
+          <img src="/Images/HTML.PNG">
         </nav>
 </html>
