html page changes

--- a/Individualproject/aboutpage.html
+++ b/Individualproject/aboutpage.html
@@ -90,10 +90,12 @@
       </div>
     </div>
     <!--Trademark-->
+    <div container>
     <class id="trademark"
     <br>
     <p>
       Copyright © Sylvia Le. All Rights Reserved. 
     </p>
+    </div>
     </body>
 </html>
