--- a/Individualproject/htmlpage.html
+++ b/Individualproject/htmlpage.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
         <!--Navbar Code-->
         <div class="container-fluid">
+          <class id="navbar">
             <nav class="navbar" style="background-color: pink;">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -52,6 +53,7 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </div>
+          </class>
             <!--Start of HTML Page-->
           </div>
           <div container>
@@ -59,6 +61,43 @@
             <h1>HTML Page</h1>
           </div>
           <!--html page preview img-->
-          <img src="/Images/HTML.PNG">
+          <class id="htmlpreview">
+            <img src="/Images/htmlpreview.PNG" alt="html page preview">
+          </class>
         </nav>
+        <!--Page desc. html-->
+        <div container>
+        <class id="projdesc"
+          <h2>
+            <b>Duration</b>
+          </h2>
+        </div>
+        <div container>
+          <class id="tools"
+            <h2>
+              <b>Tools Used</b>
+            </h2>
+        </div>
+        <div container>
+          <class id="livelink"
+            <h2>
+              <b>Project Link:</b> 
+              <br>
+              <br>
+              <a href="https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html">https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html</a>
+            </h2>
+        </div>
+        <div container>
+          <class id="context"
+            <h2>
+              <br>
+              <b>Context</b>
+            </h2>
+        </div>
+        <div container>
+          <class id="learned"
+            <h2>
+              <b>What I learned</b>
+            </h2>
+        </div>
 </html>
