html project page changes

--- a/Individualproject/htmlpage.html
+++ b/Individualproject/htmlpage.html
@@ -67,24 +67,34 @@
         </nav>
         <!--Page desc. html-->
         <div container>
-        <class id="projdesc"
+        <class id="duration"
           <h2>
-            <b>Duration</b>
+            <b>Duration:</b>
           </h2>
+        </div>
+        <div container>
+          <class id="durationtext"
+            <p>
+              1 Week
+            </p>
         </div>
         <div container>
           <class id="tools"
             <h2>
-              <b>Tools Used</b>
+              <b>Tools Used:</b>
             </h2>
+        </div>
+        <div container>
+          <class id="tooltext">
+            <p>
+              W3Schools, VScode, Github
+            </p>
+          </class>
         </div>
         <div container>
           <class id="livelink"
             <h2>
-              <b>Project Link:</b> 
-              <br>
-              <br>
-              <a href="https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html">https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html</a>
+              <b>Project Link:</b> <a href="https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html">https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html</a>
             </h2>
         </div>
         <div container>
@@ -95,9 +105,38 @@
             </h2>
         </div>
         <div container>
+          <class id="contexttext">
+            <p>
+              This was the first HTML Project I learned / Practice individually, which was why
+              <br>
+              I wanted to use this as a notes page to start off with while implementing
+              <br>
+              some individual practice
+            </p>
+          </class>
+        </div>
+        <div container>
           <class id="learned"
             <h2>
               <b>What I learned</b>
             </h2>
         </div>
+        <div container>
+          <class id="learnedtext">
+            <p>
+              Since this was the first project I created for HTML, this was a starter page that involved learning how to use dividers, different headers,
+              <br>
+              how to emphaize text, create comments, learn how to use other skills as a part of my B IMD 233 class individual assignment.
+            </p>
+          </class>
+        </div>
+          <!--Trademark-->
+            <div container>
+            <class id="trademark"
+            <br>
+            <p>
+              Copyright © Sylvia Le. All Rights Reserved. 
+            </p>
+            </div>
+    </body>
 </html>
