HTML Page centering

--- a/Individualproject/htmlpage.html
+++ b/Individualproject/htmlpage.html
@@ -69,27 +69,14 @@
         <div container>
         <class id="duration"
           <h2>
-            <b>Duration:</b>
+            <b>Duration:</b> 1 Week
           </h2>
-        </div>
-        <div container>
-          <class id="durationtext"
-            <p>
-              1 Week
-            </p>
         </div>
         <div container>
           <class id="tools"
             <h2>
-              <b>Tools Used:</b>
+              <b>Tools Used:</b> W3Schools, VScode, Github
             </h2>
-        </div>
-        <div container>
-          <class id="tooltext">
-            <p>
-              W3Schools, VScode, Github
-            </p>
-          </class>
         </div>
         <div container>
           <class id="livelink"
@@ -109,7 +96,6 @@
             <p>
               This was the first HTML Project I learned / Practice individually, which was why
               I wanted to use this as a notes page to start off with while implementing
-              <br>
               some individual practice
             </p>
           </class>
@@ -117,20 +103,16 @@
         <div container>
           <class id="learned"
             <h2>
-              <b>What I learned</b>
-            </h2>
-        </div>
-        <div container>
-          <class id="learnedtext">
-            <p>
+              <b>What I learned</b> 
+              <br>
               Since this was the first project I created for HTML, this was a starter page that involved learning how to use dividers, different headers,
               how to emphaize text, create comments, learn how to use other skills as a part of my B IMD 233 class individual assignment.
-            </p>
-          </class>
+            </h2>
         </div>
           <!--Trademark-->
             <div container>
             <class id="trademark"
+            <br>
             <br>
             <p>
               Copyright © Sylvia Le. All Rights Reserved. 
