--- a/Individualproject/htmlpage.html
+++ b/Individualproject/htmlpage.html
@@ -61,9 +61,7 @@
             <h1>HTML Page</h1>
           </div>
           <!--html page preview img-->
-          <class id="htmlpreview">
-            <img src="/Images/htmlpreview.PNG" alt="html page preview">
-          </class>
+            <img src="/Images/htmlpreview.PNG" class="center" alt="html page preview">
         </nav>
         <!--Page desc. html-->
         <div container>
