Bootstrap Page start

--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -65,9 +65,11 @@
     <p>
      <b>Hello, I'm Sylvia Le</b>
      </p>
-    <h1>
+     <class id="landinghead">
+      <h1>
         Welcome to My Personal Portfolio Page!
-    </h1>
+      </h1>
+     </class>
     <p>
         <b>Sophomore @ The University of Washington Bothell |  Hodophile | Foodie</b>
     </p>
