--- a/Individualproject/bootstrappage.html
+++ b/Individualproject/bootstrappage.html
@@ -11,6 +11,7 @@
         <!--Navbar-->
         <!--Navbar color - Bootstrap 5.2.0-->
         <!--Navbar Icon - HTML-->
+        <class id="navbar">
         <nav class="navbar">
         <!--Navbar Code-->
         <div class="container-fluid">
@@ -54,6 +55,11 @@
             </div>
           </div>
         </nav>
-        <h1>Bootstrap Page</h1>
+        <div container>
+          <class id="bootstraphead">
+            <h1>Bootstrap Page</h1>
+          </class>
+        </div>
+        <img src="/"
     </body>
 </html>
