Changed individual page website links

--- a/Individualproject/JSpage.html
+++ b/Individualproject/JSpage.html
@@ -38,11 +38,13 @@
                 <li class="nav-item">
                   <a class="nav-link active" href="https://sylviale101.github.io/Individualproject/projectspage.html">Projects</a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">HTML Page</a></li>
-                    <li><a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a></li>
-                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Sylviale101.html">Bootstrap Page</a></li>
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/htmlpage.html">HTML Page</a></li>
+                    <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html"-->
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/csspage.html">CSS Page</a></li>
+                    <!--https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html-->
+                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/bootstrappage.html">Bootstrap Page</a></li>
+                    <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html-->
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Index.html">Team Index Page</a></li>
                   </ul>
                 </li>
               </ul>
