--- a/Individualproject/projectspage.html
+++ b/Individualproject/projectspage.html
@@ -42,10 +42,12 @@
           <!--Projects dropdown menu - Bootstrap v5.2-->
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/htmlpage.html">HTML Page</a></li>
-            <li><a class="dropdown-item" href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">CSS Page</a></li>
-            <li><a class="dropdown-item" href="https://givemeabetterusername.github.io/Team2Bootstrap/Sylviale101/Sylviale101-bootstrap.html">Bootstrap Page</a></li>
+            <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html"-->
+            <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/csspage.html">CSS Page</a></li>
+            <!--https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html-->
+            <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/bootstrappage.html">Bootstrap Page</a></li>
+            <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html-->
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Index.html">Team Index Page</a></li>
           </ul>
         </li>
   </ul>
