Changed page links

--- a/Individualproject/bootstrappage.html
+++ b/Individualproject/bootstrappage.html
@@ -44,9 +44,8 @@
                     <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/csspage.html">CSS Page</a></li>
                     <!--https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html-->
                     <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/bootstrappage.html">Bootstrap Page</a></li>
-                    <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html-->
+                    <!--https://givemeabetterusername.github.io/Team2Bootstrap/Sylviale101/Sylviale101-bootstrap.html-->
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="https://sylviale101.github.io/Team2HTML/Index.html">Team Index Page</a></li>
                   </ul>
                 </li>
               </ul>
@@ -63,6 +62,61 @@
             <h1>Bootstrap Page</h1>
           </class>
         </div>
+         <!--html page preview img-->
+         <img src="/Images/htmlpreview.PNG" class="center" alt="html page preview">
+        </nav>
+        <!--Page desc. html-->
+        <div container>
+        <class id="duration"
+          <h2>
+            <b>Duration:</b> 1 Week
+          </h2>
+        </div>
+        <div container>
+          <class id="tools"
+            <h2>
+              <b>Tools Used:</b> W3Schools, VScode, Github
+            </h2>
+        </div>
+        <div container>
+          <class id="livelink"
+            <h2>
+              <b>Project Link:</b> <a href="https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html">https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html</a>
+            </h2>
+        </div>
+        <div container>
+          <class id="context"
+            <h2>
+              <br>
+              <b>Context</b>
+            </h2>
+        </div>
+        <div container>
+          <class id="contexttext">
+            <p>
+              This was the first HTML Project I learned / Practice individually, which was why
+              I wanted to use this as a notes page to start off with while implementing
+              some individual practice
+            </p>
+          </class>
+        </div>
+        <div container>
+          <class id="learned"
+            <h2>
+              <b>What I learned</b> 
+              <br>
+              Since this was the first project I created for HTML, this was a starter page that involved learning how to use dividers, different headers,
+              how to emphaize text, create comments, learn how to use other skills as a part of my B IMD 233 class individual assignment.
+            </h2>
+        </div>
+          <!--Trademark-->
+            <div container>
+            <class id="trademark"
+            <br>
+            <p>
+              Copyright © Sylvia Le. All Rights Reserved. 
+            </p>
+            </div>
         <img src="/"
     </body>
 </html>
