--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -78,20 +78,20 @@
 <!--Linking Image to a URL - JavaScript-->
     <!--HTML Website-->
   <class id="html">
-    <a href="https://sylviale101.github.io/HTML/Sylviale101.html">
+    <a href="https://sylviale101.github.io/Individualproject/htmlpage.html">
         <img alt="html page" class="figure-img img-fluid rounded" src="/Images/HTML.PNG" >
     </a>
   </class>
   <!--CSS Website-->
   <class id="css">
-    <a href="https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html">
+    <a href="https://sylviale101.github.io/Individualproject/csspage.html">
       <img alt="css page" class="figure-img img-fluid rounded" src="/Images/css.PNG">
     </a>
   </class>
   <br>
   <!--Bootstrap Website-->
     <class id="bootstrap">
-      <a href="https://sylviale101.github.io/Bootstrap/Sylviale101-bootstrap.html#">
+      <a href="https://sylviale101.github.io/Individualproject/bootstrappage.html">
         <img alt="bootstrap page" class="figure-img img-fluid rounded" src="/Images/bootstrap.PNG">
      </a>
     </class>
