Bootstrap page changes

--- a/Individualproject/bootstrappage.html
+++ b/Individualproject/bootstrappage.html
@@ -63,7 +63,7 @@
           </class>
         </div>
          <!--html page preview img-->
-         <img src="/Images/htmlpreview.PNG" class="center" alt="html page preview">
+         <img src="/Images/bootstrap.PNG" class="center" alt="html page preview">
         </nav>
         <!--Page desc. html-->
         <div container>
