Edited Bootstrap page details

--- a/Individualproject/bootstrappage.html
+++ b/Individualproject/bootstrappage.html
@@ -63,7 +63,7 @@
           </class>
         </div>
          <!--html page preview img-->
-         <img src="/Images/bootstrap.PNG" class="center" alt="html page preview">
+         <img src="/Images/bootstrappreview.PNG" class="center" alt="html page preview">
         </nav>
         <!--Page desc. html-->
         <div container>
@@ -81,7 +81,7 @@
         <div container>
           <class id="livelink"
             <h2>
-              <b>Project Link:</b> <a href="https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html">https://sylviale101.github.io/SylviasCSS/Sylviale101-CSS.html</a>
+              <b>Project Link:</b> <a href="https://givemeabetterusername.github.io/Team2Bootstrap/Sylviale101/Sylviale101-bootstrap.html">Bootstrap Page</a>
             </h2>
         </div>
         <div container>
@@ -94,9 +94,10 @@
         <div container>
           <class id="contexttext">
             <p>
-              This was the first HTML Project I learned / Practice individually, which was why
-              I wanted to use this as a notes page to start off with while implementing
-              some individual practice
+              This is my first Bootstrap page, which consists of my previous css + html pages and then
+              <br>
+              had additional add ons of bootstrap codes and edits to create it into the version it is
+              seen as above.
             </p>
           </class>
         </div>
@@ -105,13 +106,15 @@
             <h2>
               <b>What I learned</b> 
               <br>
-              Since this was the first project I created for HTML, this was a starter page that involved learning how to use dividers, different headers,
-              how to emphaize text, create comments, learn how to use other skills as a part of my B IMD 233 class individual assignment.
+              <br>
+              Since this was the first project I created using bootstrap on top of an existing version of my previous pages (HTML and CSS), this was a starter page that involves
+             adding a navigation bar, adding icons, tables, class ids, and using grid systems as a part of my B IMD 233 class individual assignment.
             </h2>
         </div>
           <!--Trademark-->
             <div container>
             <class id="trademark"
+            <br>
             <br>
             <p>
               Copyright © Sylvia Le. All Rights Reserved. 
