--- a/Javascript/Sylviale101-JS.html
+++ b/Javascript/Sylviale101-JS.html
@@ -204,6 +204,14 @@
             </p>
         </div>
 </div>
+<!--Javascript code starts here-->
+<div class="container">
+    <hr>
+        <h2>Javascript Practice</h2>
+        <p>
+            For my first Javascript practice, I will be practicing on making this paragraph disappear using Javascript.
+        </p>
+</div>
 <!--Added a container-->
 <div class="container">
 <hr>
