--- a/Javascript/Sylviale101-JS.html
+++ b/Javascript/Sylviale101-JS.html
@@ -208,8 +208,8 @@
 <div class="container">
     <hr>
         <h2>Javascript Practice</h2>
-        <p>
-            For my first Javascript practice, I will be practicing on making this paragraph disappear using Javascript.
+        <p id="poof">
+            For my first Javascript practice, this paragraph will suddenly appear when there is a mouse hovering over it!
         </p>
 </div>
 <!--Added a container-->
