Removed stlye tag from bs page

--- a/Javascript/Sylviale101-JS.html
+++ b/Javascript/Sylviale101-JS.html
@@ -72,13 +72,14 @@
 </div>
 <!--Using the Span Tag-->
 <!--Adding a container-->
- <div class="container">
+<style>
+<div class="container">
     <h2>Using the Span Tag</h2>
         <p>
             By using the span tag, you can style your words and change the font of them. For example:
             I like the color <span style="color:plum">plum</span> a lot!
         </p>
-    </div>
+</div>
 <!--How to use Line Breaks-->
 <div class="container">
     <h2>Implementing Line Breaks</h2>
@@ -203,14 +204,6 @@
              By creating a grid system through using bootstrap, you can divide a section of your webpage in half like this.
             </p>
         </div>
-</div>
-<!--Javascript code starts here-->
-<div class="container">
-    <hr>
-        <h2>Javascript Practice</h2>
-        <p id="poof">
-            For my first Javascript practice, this paragraph will suddenly appear when there is a mouse hovering over it!
-        </p>
 </div>
 <!--Added a container-->
 <div class="container">
